<resources>
    <string name="app_name">Tool_sharing</string>

    <string name="nav_exchange">Exchange</string>
    <string name="nav_library">Library</string>
    <string name="nav_messages">Messages</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to registration(signup) -->
    <string name="prompt_email">Email</string>
    <string name="login_error">Username or Password is Incorrect</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="search_hint">search tool</string>
    <string name="search">Search</string>
    <string name="nav_profile">Profile</string>

    <!-- Strings related to my profile -->
    <string name="profile_info">Information</string>
    <string name="image_desc">User Logo</string>
    <string name="stu_username">Username</string>
    <string name="stu_name">Name</string>
    <string name="stu_email">Email</string>
    <string name="sign_out">Sign Out</string>



    <!-- Strings related to edit my profile -->
    <string name="student_id">Student ID</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_password">Password</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_save">Save Changes</string>

    <!-- String related to sign up -->
    <string name="sign_up_request">Sign Up Request</string>
    <string name="sign_up">Sign Up </string>

    <!-- String related to login -->
    <string name="login">Login</string>


    <!-- Strings related to view user profile -->
    <string name="set_username">Set Username</string>
    <string name="name_background_desc">background</string>
    <string name="view_user_name">Full Name</string>
    <string name="view_user_available_books">Available Books</string>
    <string name="message_user_title">Message</string>

    <!-- Strings related to ellipses menu -->
    <string name="view_user">View User</string>
    <string name="message">Message</string>


</resources>
