<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBeige"

    tools:context=".stu_Registration">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorMaroon"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/CustomPopupStyle">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up"
        android:textColor="@color/colorYellow"
        android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:text="@string/sign_up_request"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@id/sign_up_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sign_up_user_image"
                android:layout_width="135dp"
                android:layout_height="141dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/image_desc"
                android:minWidth="110dp"
                android:minHeight="110dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_user_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/student_id"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_username_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_usernname_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/edit_profile_username"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_username_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/edit_profile_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp"  />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/edit_profile_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>